--- a/vr.html
+++ b/vr.html
@@ -67,6 +67,17 @@
         </h4>
       </div>
       <div class="container column">
+        <iframe
+          width="1120"
+          height="630"
+          src="https://www.youtube.com/embed/-HPSQL-qNEg"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
+      </div>
+      <div class="container column">
         <h1>More Info</h1>
         <h4>
           Prepare for departure but beware the Impostor! Play with 4-10 players
